Text improvement in 'Accepts Any Args'

--- a/puzzlers/pzzlr-039.html
+++ b/puzzlers/pzzlr-039.html
@@ -58,6 +58,6 @@ acceptsAnyArgs(("Psst", "hey", "world:"))(4, 2)
 </pre>
   </p>
   <p>
-    Auto-tupling is currently <a href="https://issues.scala-lang.org/browse/SI-3583" target="_blank">not documented in the SLS</a>.
+    Auto-tupling is <a href="https://issues.scala-lang.org/browse/SI-3583" target="_blank">not currently documented in the SLS</a>.
   </p>
 </div>
