Changing capitalization of 'In', 'Is' in titles
What's In a Name? -> What's in a Name?
The Devil Is In the Defaults -> The Devil Is in the Defaults

--- a/about.html
+++ b/about.html
@@ -128,7 +128,7 @@
               <li><a href="/#pzzlr-021" id="pzzlr-021">Views From the Top</a></li>
               <li><a href="/#pzzlr-022" id="pzzlr-022">Count Me Now, Count Me Later</a></li>
               <li><a href="/#pzzlr-023" id="pzzlr-023">Information Overload</a></li>
-              <li><a href="/#pzzlr-024" id="pzzlr-024">What's In a Name?</a></li>
+              <li><a href="/#pzzlr-024" id="pzzlr-024">What's in a Name?</a></li>
               <li><a href="/#pzzlr-025" id="pzzlr-025">$!.*% Iterators!</a></li>
               <!-- 26 'reserved' for Scalaz - suggestion by A.P. Marki -->
               <li><a href="/#pzzlr-027" id="pzzlr-027">I Can Has Padding?</a></li>
@@ -145,7 +145,7 @@
               <li><a href="/#pzzlr-039" id="pzzlr-039">Accepts Any Args</a></li>
               <li><a href="/#pzzlr-040" id="pzzlr-040">Set the Record Straight</a></li>
               <li><a href="/#pzzlr-041" id="pzzlr-041">Signs of Trouble</a></li>
-              <li><a href="/#pzzlr-042" id="pzzlr-042">The Devil Is In the Defaults</a></li>
+              <li><a href="/#pzzlr-042" id="pzzlr-042">The Devil Is in the Defaults</a></li>
               <li><a href="/#pzzlr-043" id="pzzlr-043">Market Precedence</a></li>
               <li><a href="/#pzzlr-044" id="pzzlr-044">Float or Sink?</a></li>
               <li class="divider"></li>
