--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
               <li><a href="#" id="pzzlr-021">Views From the Top</a></li>
               <li><a href="#" id="pzzlr-022">Count Me Now, Count Me Later</a></li>
               <li><a href="#" id="pzzlr-023">Information Overload</a></li>
-              <li><a href="#" id="pzzlr-024">What's In a Name?</a></li>
+              <li><a href="#" id="pzzlr-024">What's in a Name?</a></li>
               <li><a href="#" id="pzzlr-025">$!.*% Iterators!</a></li>
               <!-- 26 'reserved' for Scalaz - suggestion by A.P. Marki -->
               <li><a href="#" id="pzzlr-027">I Can Has Padding?</a></li>
@@ -143,7 +143,7 @@
               <li><a href="#" id="pzzlr-039">Accepts Any Args</a></li>
               <li><a href="#" id="pzzlr-040">Set the Record Straight</a></li>
               <li><a href="#" id="pzzlr-041">Signs of Trouble</a></li>
-              <li><a href="#" id="pzzlr-042">The Devil Is In the Defaults</a></li>
+              <li><a href="#" id="pzzlr-042">The Devil Is in the Defaults</a></li>
               <li><a href="#" id="pzzlr-043">Market Precedence</a></li>
               <li><a href="#" id="pzzlr-044">Float or Sink?</a></li>
               <li class="divider"></li>
