--- a/puzzlers/pzzlr-042.html
+++ b/puzzlers/pzzlr-042.html
@@ -1,4 +1,4 @@
-<h1>The Devil Is In the Defaults</h1>
+<h1>The Devil Is in the Defaults</h1>
 <table class="table meta-table table-condensed">
   <tbody>
     <tr>
