--- a/puzzlers/pzzlr-028.html
+++ b/puzzlers/pzzlr-028.html
@@ -18,7 +18,7 @@
 <div class="code-snippet">
   <h3>What is the result of executing the following code?</h3>
 <pre class="prettyprint lang-scala">
-import scala.collection.JavaConverters._
+import collection.JavaConverters._
 def fromJava: java.util.Map[String, java.lang.Integer] = {
   val map = new java.util.HashMap[String, java.lang.Integer]()
   map.put("key", null)
