--- a/puzzlers/pzzlr-041.html
+++ b/puzzlers/pzzlr-041.html
@@ -18,9 +18,9 @@
 <div class="code-snippet">
   <h3>What is the result of executing the following code?</h3>
 <pre class="prettyprint lang-scala">
-import scala.math.signum
-import scala.Double.NegativeInfinity
-import scala.Double.PositiveInfinity
+import math.signum
+import Double.NegativeInfinity
+import Double.PositiveInfinity
 
 val Underflow_+ = +0.0  // 1.0 / PositiveInfinity
 val Underflow_- = -0.0  // 1.0 / NegativeInfinity
