--- a/puzzlers/pzzlr-042.html
+++ b/puzzlers/pzzlr-042.html
@@ -18,7 +18,7 @@
 <div class="code-snippet">
   <h3>What is the result of executing the following code?</h3>
 <pre class="prettyprint lang-scala">
-import scala.collection.mutable.Queue
+import collection.mutable.Queue
 
 val goodies: Map[String, Queue[String]] = Map().withDefault(_ => Queue("No superheros here. Keep looking."))
 val baddies: Map[String, Queue[String]] = Map().withDefaultValue(Queue("No monsters here. Lucky you."))
