Adding puzzler 'Size It Up'

--- a/about.html
+++ b/about.html
@@ -149,6 +149,7 @@
               <li><a href="/#pzzlr-043" id="pzzlr-043">Market Precedence</a></li>
               <li><a href="/#pzzlr-044" id="pzzlr-044">Float or Sink?</a></li>
               <li><a href="/#pzzlr-045" id="pzzlr-045">Stringy Conversions</a></li>
+              <li><a href="/#pzzlr-046" id="pzzlr-046">Size It Up</a></li>
               <li><a href="/#pzzlr-047" id="pzzlr-047">A Listful of Dollars</a></li>
               <li><a href="/#pzzlr-048" id="pzzlr-048">One, Two, Skip a Few</a></li>
               <li class="divider"></li>
