--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
               <li><a href="#" id="pzzlr-043">Market Precedence</a></li>
               <li><a href="#" id="pzzlr-044">Float or Sink?</a></li>
               <li><a href="#" id="pzzlr-045">Stringy Conversions</a></li>
+              <li><a href="#" id="pzzlr-046">Size It Up</a></li>
               <li><a href="#" id="pzzlr-047">A Listful of Dollars</a></li>
               <li><a href="#" id="pzzlr-048">One, Two, Skip a Few</a></li>
               <li class="divider"></li>
