--- a/puzzlers/pzzlr-size-matters.html
+++ b/puzzlers/pzzlr-size-matters.html
@@ -19,35 +19,43 @@
   <h3>What is the result of executing the following code?</h3>
 <pre class="prettyprint lang-scala">
   import collection.mutable
-  def howManyItems(lunchbox: mutable.Set[String]): Int = (lunchbox + "apple").size
-  println(howManyItems(mutable.Set("chocolate bar", "orange juice", "sandwich")))
+  def howManyItems(lunchbox: mutable.Set[String], itemToAdd: String): Int =
+    (lunchbox + itemToAdd).size
+  def howManyItemsRefac(lunchbox: mutable.Iterable[String], itemToAdd: String): Int = 
+    (lunchbox + itemToAdd).size
 
-  def howManyItemsRefac(lunchbox: mutable.Iterable[String]): Int = (lunchbox + "apple").size
-  println(howManyItemsRefac(mutable.Set("chocolate bar", "orange juice", "sandwich")))
+  val lunchbox = mutable.Set("chocolate bar", "orange juice", "sandwich")
+  println(howManyItems(lunchbox, "apple"))
+  println(howManyItemsRefac(lunchbox, "apple"))
+  println(lunchbox.size)
 </pre>
     <ol>
     <li>Prints:
 <pre class="prettyprint lang-scala">
 4
-4
-</pre>
-    </li>
-    <li>Prints:
-<pre class="prettyprint lang-scala">
-3
-4
+5
+5
 </pre>
     </li>
     <li>Prints:
 <pre class="prettyprint lang-scala">
 4
+4
 3
+</pre>
+    </li>
+    <li>Prints:
+<pre class="prettyprint lang-scala">
+4
+4
+4
 </pre>
     </li>
     <li id="correct-answer">Prints:
 <pre class="prettyprint lang-scala">
 4
 47
+3
 </pre>
     </li>
   </ol>
@@ -56,18 +64,18 @@
 <div id="explanation" class="explanation" style="display:none">
   <h3>Explanation</h3>
   <p>
-    Whilst the <tt>+</tt> operator is defined for <a href="http://www.scala-lang.org/api/current/#scala.collection.Set" target="_blank">Sets</a>, with the effect of adding the provided argument to the set, it is not defined for collections in general.
+    The <tt>+</tt> operator is defined for <a href="http://www.scala-lang.org/api/current/#scala.collection.Set" target="_blank">immutable</a> and <a href="http://www.scala-lang.org/api/current/#scala.collection.mutable.Set" target="_blank">mutable Sets</a>, with the effect of creating a <em>new</em> set consisting of the provided argument and all the items in the original set. It does <strong>not</strong> change the original set, so neither the call to <tt>howManyItems</tt>, nor to <tt>howManyItemsRefac</tt>, actually modify the lunchbox.
   </p>
   <p>
-    <tt>+</tt> is <em>also</em> Scala's string concatenation operator, however! And since Scala by default provides an implicit conversion from <tt>Any</tt> to <tt>String</tt>, the compiler can make <tt>lunchbox + "apple"</tt> compile also in the case of <tt>howManyItemsRefac</tt>. Rather than adding the apple to the lunchbox, however, the statement ends up computing the concatenation <tt>lunchbox.toString + "apple"</tt> and returning the length of the resulting string.
+    Whilst <tt>+</tt> is defined for sets, it is not defined for collections in general, however. But <tt>+</tt> is also Scala's string concatenation operator! And since Scala by default provides an implicit conversion from <tt>Any</tt> to <tt>String</tt>, the compiler can make <tt>lunchbox + "apple"</tt> compile also in the case of <tt>howManyItemsRefac</tt>. Rather than adding the apple to the lunchbox, though, the statement ends up computing the concatenation <tt>lunchbox.toString + "apple"</tt> and returning the length of the resulting string.
   </p>
   <p>
     The implicit view that enables the <tt>Any</tt> to <tt>String</tt> conversion, <a href="http://www.scala-lang.org/api/current/index.html#scala.Predef$" target="_blank"><tt>Predef.any2stringadd</tt></a>, is provided for interoperability with Java. Due to its ability to cause unexpected effects such as this one, it continues to provoke <a href="https://groups.google.com/d/topic/scala-user/Mbtp_Cq6zKI/discussion" target="_blank">lively</a> <a href="https://issues.scala-lang.org/browse/SI-194" target="_blank">debate</a>.
   </p>
   <p>
-    In compiled classes, as well is in the REPL when using the <tt>:paste -raw</tt> mode, you can <em>disable</em> this (or any other implicit, for that matter), by starting adding the following import to the beginning of your program:
+    In compiled classes, as well is in the REPL when using <tt>:paste -raw</tt>, you can disable this view &ndash; or any other implicit, for that matter &ndash; by adding the following import as the first (yes, it must be the first) line of your program:
 <pre class="prettyprint lang-scala">
-import Predef.{any2stringadd => _}
+import Predef.{any2stringadd => _, _}
 </pre>
   </p>
 </div>
