Using HTML escape sequences correctly in 'Float or Sink?'

--- a/puzzlers/pzzlr-044.html
+++ b/puzzlers/pzzlr-044.html
@@ -97,6 +97,6 @@ new TIndexableRange[Float](0, 10)(float2IntByFloor _).apply(float2IntByRounding(
     which, unsurprisingly, returns the element at index <tt>3</tt> in the range.
   </p>
   <p>
-    View bounds will quite possibly be <a href="https://issues.scala-lang.org/browse/SI-7629" target="_blank">deprecated soon</a>. The suggested alternative syntax, which uses context bounds, similarly results in an "unseen" implicit parameter that can result in the behaviour observed.
+    View bounds will quite possibly be <a href="https://issues.scala-lang.org/browse/SI-7629" target="_blank">deprecated soon</a>. The suggested alternative syntax, which uses context bounds, similarly results in an &quot;unseen&quot; implicit parameter that can result in the behaviour observed.
   </p>
 </div>
