Harmonizing references to the SLS and SLS sections
- 'According to the SLS (&sect;X.Y)'
- 'According to SLS &sect;X.Y'

--- a/puzzlers/pzzlr-011.html
+++ b/puzzlers/pzzlr-011.html
@@ -94,7 +94,7 @@ For case classes, the <tt>equals</tt>, <tt>hashCode</tt> and
 class with the same elements, we could expect that both <tt>equals</tt> and
 <tt>hashCode</tt> return the same result (i.e. answers 1 and 4).
 </p><p>
-According to the SLS (section 5.3.2) however, a case class implicitly
+According to the SLS (&sect;5.3.2) however, a case class implicitly
 overrides the methods <tt>equals</tt>, <tt>hashCode</tt> and
 <tt>toString</tt> of class <tt>scala.AnyRef</tt> <em>only</em> if the case class
 itself does not provide a definition for one of these methods and <em>only</em> if
