--- a/puzzlers/pzzlr-016.html
+++ b/puzzlers/pzzlr-016.html
@@ -53,7 +53,7 @@ println(s2.length)
 <p>
 The definitions of the values <tt>s1</tt> and <tt>s2</tt> are valid and compile without an error. 
 As the definitions are recursive, 
-the type of the declared values has to be provided (SLS, section 4.1).
+the type of the declared values has to be provided (SLS &sect;4.1).
 </p><p>
 In Scala, object fields are preinitialized to their default value, and for the type <tt>String</tt> 
 (and all other reference types) the default value is <tt>null</tt>.
