--- a/puzzlers/pzzlr-018.html
+++ b/puzzlers/pzzlr-018.html
@@ -61,7 +61,7 @@ Scala does not complain about unreachable code, therefore the code compiles fine
 If you want to be warned about unreachable code, then use the compiler option <tt>-Ywarn-dead-code</tt>.
 If you want to see a compiler error instead of a warning, then in addition use the compiler option <tt>-Xfatal-warnings</tt>.
 </p><p>
-The answer to this question can be found in section 6.20 of the SLS:
+The answer to this question can be found in SLS &sect;6.20:
 <blockquote>
 A return expression <tt>return e</tt> must occur inside the body of some enclosing named
 method or function. The innermost enclosing named method or function in a
