--- a/puzzlers/pzzlr-020.html
+++ b/puzzlers/pzzlr-020.html
@@ -58,7 +58,7 @@ invert3(v1 = 2, v2 = 1)
 <div id="explanation" class="explanation" style="display:none">
 <h3>Explanation</h3>
 <p>
-The type of <tt>invert3</tt> after eta-expansion (SLS, section 6.26.5) is no longer a method but a function object,
+The type of <tt>invert3</tt> after eta-expansion (SLS &sect;6.26.5) is no longer a method but a function object,
 i.e. an instance of <tt>Function2[Int, Int, Unit]</tt>. This is also reported by the REPL:
 <pre class""prettyprint lang-scala">
 scala> def invert3 = invert(3) _
