--- a/puzzlers/pzzlr-021.html
+++ b/puzzlers/pzzlr-021.html
@@ -78,7 +78,7 @@ package base
 <div id="explanation" class="explanation" style="display:none">
 <h3>Explanation</h3>
 <p>
-According to the SLS (Section 9.2) it is illegal to have a package with the same fully qualified name as a module or a class.
+According to the SLS (&sect;9.2) it is illegal to have a package with the same fully qualified name as a module or a class.
 For example, on the following compilation unit
 <pre class="prettyprint lang-scala">
 package com.scalapuzzlers
