--- a/puzzlers/pzzlr-022.html
+++ b/puzzlers/pzzlr-022.html
@@ -84,9 +84,9 @@ different sections of the Scala language specification.
 </p>
 <p>
 <tt>f(a)(_)</tt> is the placeholder syntax for anonymous functions,
-described in SLS 6.23.  Evaluation is deferred.
+described in SLS &sect;6.23.  Evaluation is deferred.
 </p>
-<p><tt>f(a) _</tt> is eta expansion, described in SLS 6.26.5.
+<p><tt>f(a) _</tt> is eta expansion, described in SLS &sect;6.26.5.
 Arguments given are evaluated eagerly; only the method call itself
 is deferred.
 </p>
