--- a/puzzlers/pzzlr-024.html
+++ b/puzzlers/pzzlr-024.html
@@ -76,7 +76,7 @@ Scala uses the static type of a variable to bind parameter names, but the defaul
 <li>
 The binding of parameter names is done by the compiler and the only information the compiler can use is the static type of the variable. 
 <li>
-For parameters with a default value the compiler creates methods which compute the default argument expressions (SLS Section 4.6). In the above example, both classes <tt>C</tt> and <tt>D</tt> contain the methods <tt>sum$default$1</tt> and <tt>sum$default$2</tt> for the two default parameters. When a parameter is missing, the compiler uses the result of these methods, and these methods are invoked at run-time.
+For parameters with a default value the compiler creates methods which compute the default argument expressions (SLS &sect;4.6). In the above example, both classes <tt>C</tt> and <tt>D</tt> contain the methods <tt>sum$default$1</tt> and <tt>sum$default$2</tt> for the two default parameters. When a parameter is missing, the compiler uses the result of these methods, and these methods are invoked at run-time.
 </ul>
 </p>
 <p>
