--- a/puzzlers/pzzlr-033.html
+++ b/puzzlers/pzzlr-033.html
@@ -72,7 +72,7 @@ What a nice day! :-)
 <div id="explanation" class="explanation" style="display:none">
   <h3>Explanation</h3>
   <p>
-    According to <a href="http://www.scala-lang.org/docu/files/ScalaReference.pdf" target="_blank">SLS &sect;7.2</a>:
+    According to SLS &sect;7.2:
     <blockquote>If there are several eligible arguments which match the implicit parameter's type, a most specifc one will be chosen using the rules of static overloading resolution (&sect;6.26.3).</blockquote>
     If the rules for static overloading resolution cannot determine a most specific type, this results in an error, as is the case here:
 <pre class="prettyprint lang-scala">
