--- a/puzzlers/pzzlr-043.html
+++ b/puzzlers/pzzlr-043.html
@@ -77,7 +77,7 @@ OldSkoolMarket main null
     The implicit <tt>TouristMarkup</tt> is more specific than <tt>Markup</tt>
     because <tt>TouristMarkup</tt> conforms to <tt>Markup</tt> but not conversely. 
     See the fourth bullet point of the definition of &quot;as specific as&quot; of
-    SLS 6.26.3, which mentions &quot;existential duals&quot;.
+    SLS &sect;6.26.3, which mentions &quot;existential duals&quot;.
     In this context, the take-away is:
   </p>
   <blockquote><p style="font-size: 1.0em;">
