--- a/puzzlers/pzzlr-036.html
+++ b/puzzlers/pzzlr-036.html
@@ -66,7 +66,7 @@ Puzzled yet?
   </p>
   <p>
     How could this be? Constructors always have a parameter list, and if no arguments are
-    provided for the application, then an empty argument list is supplied (SLS 5.1.1).
+    provided for the application, then an empty argument list is supplied (SLS &sect;5.1.1).
     Since the parameter to the constructor is of type <tt>Unit</tt>, the compiler is willing
     to adapt the empty argument list to an empty tuple, the <tt>Unit</tt> value.
   </p>
