--- a/puzzlers/pzzlr-listful-of-dollars.html
+++ b/puzzlers/pzzlr-listful-of-dollars.html
@@ -70,7 +70,7 @@ List(1, 2, 3)
       <li><tt>{ a: Int => Dollar }</tt> is parsed as <tt>{ (a: Int) => Dollar }</tt>, with <tt>Int</tt> being the type of <tt>a</tt> and <tt>Dollar</tt> the constant value 1</li>
       <li><tt>(a: Int => Dollar)</tt> is parsed as <tt>(a: (Int => Dollar)}</tt>, with <tt>a</tt> being a function of type <tt>Int => Dollar</tt> and <tt>Dollar</tt> a type alias for <tt>Int</tt></li>
     </ul>
-    The latter is possible because <tt>a</tt>, as a <tt><a href="" target="_blank">List</a>[Dollar]</tt>, is <em>also</em> a function from <tt>Int</tt> (the indices into the list) to <tt>Dollar</tt> (the values in the list).
+    The latter is possible because <tt>a</tt>, as a <tt><a href="http://www.scala-lang.org/api/current/#scala.collection.immutable.List" target="_blank">List</a>[Dollar]</tt>, is <em>also</em> a function from <tt>Int</tt> (the indices into the list) to <tt>Dollar</tt> (the values in the list).
   </p>
   <p>
     The first statement, therefore, maps every element in the list to the constant value 1. The second statment uses each value in the list <em>as an index into the same list</em>, i.e. we are trying to turn <tt>List(1, 2, 3)</tt> into <tt>List(a(1), a(2), a(3))</tt>. This works until we get the last value, <tt>a(3)</tt>, which throws an <tt>IndexOutOfBoundException</tt> because <tt>a</tt> only has three elements.
