--- a/puzzlers/pzzlr-one-two-skip-a-few.html
+++ b/puzzlers/pzzlr-one-two-skip-a-few.html
@@ -3,7 +3,7 @@
   <tbody>
     <tr>
       <td class="header-column"><strong>Contributed by</strong></td>
-      <td>Andrew Phillips</td>
+      <td>Andrew Phillips & Nermin Serifovic</td>
     </tr>
     <tr>
       <td><strong>Source</strong></td>
