Changing one of the candidate answers

--- a/puzzlers/pzzlr-listful-of-dollars.html
+++ b/puzzlers/pzzlr-listful-of-dollars.html
@@ -44,11 +44,11 @@ List(1, 1, 1)
 List(1, 1, 1)
 </pre>
     </li>
-    <li>Prints:
+    <li>The first statement prints:
 <pre class="prettyprint lang-scala">
-List(1, 1, 1)
 List(1, 2, 3)
 </pre>
+and the second fails with a compilation exception
     </li>
   </ol>
 </div>
