--- a/archive.html
+++ b/archive.html
@@ -118,6 +118,7 @@
           <div class="well sidebar-nav">
             <ul class="nav nav-list">
               <li class="nav-header">Puzzlers</li>
+              <li class="nav-header">2.10</li>
               <li class="nav-header">2.9</li>
               <li><a href="#" id="pzzlr-002">Match Me</a></li>
               <li><a href="#" id="pzzlr-031">Double Take</a></li>
