--- a/contribute.html
+++ b/contribute.html
@@ -152,6 +152,7 @@
               <li><a href="/#pzzlr-046" id="pzzlr-046">Size It Up</a></li>
               <li><a href="/#pzzlr-047" id="pzzlr-047">A Listful of Dollars</a></li>
               <li><a href="/#pzzlr-048" id="pzzlr-048">One, Two, Skip a Few</a></li>
+              <li><a href="/#pzzlr-049" id="pzzlr-049">Oddly Enough</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
