--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
               <li><a href="#" id="pzzlr-046">Size It Up</a></li>
               <li><a href="#" id="pzzlr-047">A Listful of Dollars</a></li>
               <li><a href="#" id="pzzlr-048">One, Two, Skip a Few</a></li>
+              <li><a href="#" id="pzzlr-049">Oddly Enough</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
