Reducing the font size for quotes in 'Type Extortion'

--- a/puzzlers/pzzlr-032.html
+++ b/puzzlers/pzzlr-032.html
@@ -41,10 +41,10 @@ Found ()
 <div id="explanation" class="explanation" style="display:none">
   <h3>Explanation</h3>
   <blockquote>
-  <p>
+  <p style="font-size: 1.0em;">
     The bully who stole your milk money used to say: "Give it to me -- or else!"
   </p>
-  <p>
+  <p style="font-size: 1.0em;">
     But he was never satisfied and would always take as much as he could get.
   </p>
   </blockquote>
