--- a/puzzlers/pzzlr-024.html
+++ b/puzzlers/pzzlr-024.html
@@ -7,7 +7,7 @@
     </tr>
     <tr>
       <td><strong>Source</strong></td>
-      <td><a target="_blank" href="http://www.manning.com/suereth/">Scala in Depth</a>, Section 3.3.2</td>
+      <td><a target="_blank" href="http://www.manning.com/suereth/">Scala in Depth</a>, &sect;3.3.2</td>
     </tr>
     <tr>
       <td><strong>Tested with Scala version</strong></td>
