Adding the puzzler definition to the front page

--- a/index.html
+++ b/index.html
@@ -199,11 +199,29 @@
             <div id="welcome-content" style="display:none">
               <div class="headline">
                 <h1>A fun way to learn more about
-                <img src="img/scala-logo.png" alt="Scala" style="padding-bottom:15px;padding-left:10px"/></h1><br/>
+                  <img src="img/scala-logo.png" alt="Scala" style="padding-bottom:15px;padding-left:10px"/>
+                </h1>
                 <p>
-                  Welcome to Scala Puzzlers, the collection of <i>Traps, Pitfalls and Corner Cases</i> in the Scala language.<br/><br/>
-                  Prepare to be surprised, entertained and...well, puzzled! What is presented here is a selection of seemingly simple examples which demonstrate that there's plenty of head-scratching left in Scala. Let your mind be challenged by unexpected and unintuitive behaviour and results and learn something in the process.     
-                  <br/><br/>
+                  Welcome to Scala Puzzlers, the collection of <i>Traps, Pitfalls
+                  and Corner Cases</i> in the Scala language.
+                </p>
+                <p><br/>
+                  Prepare to be surprised, entertained and...well, puzzled! What
+                  is presented here is a selection of seemingly simple examples
+                  which demonstrate that there's plenty of head-scratching left in
+                  Scala. Let your mind be challenged by unexpected and unintuitive
+                  behaviour and results and learn something in the process.
+                </p>
+                <p><br/>
+                  What is a puzzler? It should be:
+                  <ul>
+                    <li>an intentional language feature (so no bugs)</li>
+                    <li>not just weird because the reader doesn't know Scala</li>
+                    <li>&quot;surprising&quot; or &quot;non-intuitive&quot; to a 
+                    reasonably skilled Scala developer</li>
+                  </ul>
+                </p>
+                <p><br/>
                   Choose a puzzler from the left-hand list to get started!
                 </p>
               </div>
