'Tested with' -> 'First tested with' in puzzler intros
Based on a suggestion by @xhudik

--- a/puzzlers/pzzlr-002.html
+++ b/puzzlers/pzzlr-002.html
@@ -12,7 +12,7 @@
       <td><a target="_blank" href="http://stackoverflow.com/questions/2727612/scalas-tuple-unwrapping-nuance">stackoverflow</a></td>
     </tr>
     <tr>
-      <td><strong>Tested with Scala version</strong></td>
+      <td><strong>First tested with Scala version</strong></td>
       <td>2.9.2</td>
     </tr>
   </tbody>  
