--- a/puzzlers/pzzlr-004.html
+++ b/puzzlers/pzzlr-004.html
@@ -12,7 +12,7 @@
       <td><a target="_blank" href="http://stackoverflow.com/questions/4701749/nullpointerexception-when-accessing-overriden-val-in-abstract-constructor">stackoverflow</a></td>
     </tr>
     <tr>
-      <td><strong>Tested with Scala version</strong></td>
+      <td><strong>First tested with Scala version</strong></td>
       <td>2.10.0</td>
     </tr>
   </tbody>  
