--- a/puzzlers/pzzlr-006.html
+++ b/puzzlers/pzzlr-006.html
@@ -12,7 +12,7 @@
       <td><a target="_blank" href="http://stackoverflow.com/questions/7040806/when-applying-map-to-a-set-you-sometimes-want-the-result-not-to-be-a-set-but">stackoverflow</a></td>
     </tr>
     <tr>
-      <td><strong>Tested with Scala version</strong></td>
+      <td><strong>First tested with Scala version</strong></td>
       <td>2.10.0</td>
     </tr>
   </tbody>  
