--- a/puzzlers/pzzlr-008.html
+++ b/puzzlers/pzzlr-008.html
@@ -12,7 +12,7 @@
       <td><a target="_blank" href="http://stackoverflow.com/questions/9842476/closing-over-the-loop-variable-in-scala">stackoverflow</a></td>
     </tr>
     <tr>
-      <td><strong>Tested with Scala version</strong></td>
+      <td><strong>First tested with Scala version</strong></td>
       <td>2.10.0</td>
     </tr>
   </tbody>
