--- a/puzzlers/pzzlr-013.html
+++ b/puzzlers/pzzlr-013.html
@@ -12,7 +12,7 @@
       <td>Based on a suggestion by <a target="_blank" href="http://www.schmitztech.com/">Michael Schmitz</a></td>
     </tr>
     <tr>
-      <td><strong>Tested with Scala version</strong></td>
+      <td><strong>First tested with Scala version</strong></td>
       <td>2.10.0</td>
     </tr>
   </tbody>  
