--- a/puzzlers/pzzlr-024.html
+++ b/puzzlers/pzzlr-024.html
@@ -10,7 +10,7 @@
       <td><a target="_blank" href="http://www.manning.com/suereth/">Scala in Depth</a>, &sect;3.3.2</td>
     </tr>
     <tr>
-      <td><strong>Tested with Scala version</strong></td>
+      <td><strong>First tested with Scala version</strong></td>
       <td>2.10.0</td>
     </tr>
   </tbody>
