--- a/puzzlers/pzzlr-033.html
+++ b/puzzlers/pzzlr-033.html
@@ -10,7 +10,7 @@
       <td><a target="_blank" href="https://groups.google.com/forum/#!msg/scala-language/OWTVHhsP3JU/Kyb8h2SqnS4J">scala-lang mailing list</a></td>
     </tr>
     <tr>
-      <td><strong>Tested with Scala version</strong></td>
+      <td><strong>First tested with Scala version</strong></td>
       <td>2.10.1</td>
     </tr>
   </tbody>
