--- a/puzzlers/pzzlr-034.html
+++ b/puzzlers/pzzlr-034.html
@@ -10,7 +10,7 @@
       <td><a target="_blank" href="https://groups.google.com/forum/?fromgroups=#!topic/scala-language/4h52vHuS7Qw">scala-lang mailing list</a></td>
     </tr>
     <tr>
-      <td><strong>Tested with Scala version</strong></td>
+      <td><strong>First tested with Scala version</strong></td>
       <td>2.10.0</td>
     </tr>
   </tbody>
