--- a/puzzlers/pzzlr-037.html
+++ b/puzzlers/pzzlr-037.html
@@ -10,7 +10,7 @@
       <td><a target="_blank" href="https://issues.scala-lang.org/browse/SI-7580">Scala issue tracker</a></td>
     </tr>
     <tr>
-      <td><strong>Tested with Scala version</strong></td>
+      <td><strong>First tested with Scala version</strong></td>
       <td>2.10.2</td>
     </tr>
   </tbody>
