--- a/puzzlers/pzzlr-038.html
+++ b/puzzlers/pzzlr-038.html
@@ -10,7 +10,7 @@
       <td><a target="_blank" href="https://groups.google.com/d/msg/scala-internals/oWla7oq8k8Q/ht7v2j3KzkAJ">scala-internals mailing list</a></td>
     </tr>
     <tr>
-      <td><strong>Tested with Scala version</strong></td>
+      <td><strong>First tested with Scala version</strong></td>
       <td>2.10</td>
     </tr>
   </tbody>
