--- a/puzzlers/pzzlr-039.html
+++ b/puzzlers/pzzlr-039.html
@@ -10,7 +10,7 @@
       <td><a target="_blank" href="https://groups.google.com/forum/#!topic/scala-language/E-YzZBY9510">scala-lang mailing list</a></td>
     </tr>
     <tr>
-      <td><strong>Tested with Scala version</strong></td>
+      <td><strong>First tested with Scala version</strong></td>
       <td>2.10</td>
     </tr>
   </tbody>
