--- a/puzzlers/pzzlr-041.html
+++ b/puzzlers/pzzlr-041.html
@@ -10,7 +10,7 @@
       <td>N/A</td>
     </tr>
     <tr>
-      <td><strong>Tested with Scala version</strong></td>
+      <td><strong>First tested with Scala version</strong></td>
       <td>2.11</td>
     </tr>
   </tbody>
