--- a/puzzlers/pzzlr-045.html
+++ b/puzzlers/pzzlr-045.html
@@ -10,7 +10,7 @@
       <td><a target="_blank" href="https://groups.google.com/forum/#!topic/scala-language/RejIFN5bLrA">scala-language mailing list</a></td>
     </tr>
     <tr>
-      <td><strong>Tested with Scala version</strong></td>
+      <td><strong>First tested with Scala version</strong></td>
       <td>2.11.0-M7</td>
     </tr>
   </tbody>
