--- a/puzzlers/pzzlr-046.html
+++ b/puzzlers/pzzlr-046.html
@@ -10,7 +10,7 @@
       <td><a target="_blank" href="https://twitter.com/extempore2/status/430102522880348160">Paul Phillips</a></td>
     </tr>
     <tr>
-      <td><strong>Tested with Scala version</strong></td>
+      <td><strong>First tested with Scala version</strong></td>
       <td>2.11.0-RC3</td>
     </tr>
   </tbody>
