--- a/puzzlers/pzzlr-047.html
+++ b/puzzlers/pzzlr-047.html
@@ -10,7 +10,7 @@
       <td><a target="_blank" href="http://stackoverflow.com/a/17642409/217013">A. P. Marki</a></td>
     </tr>
     <tr>
-      <td><strong>Tested with Scala version</strong></td>
+      <td><strong>First tested with Scala version</strong></td>
       <td>2.11.0-RC3</td>
     </tr>
   </tbody>
