--- a/puzzlers/pzzlr-template.html
+++ b/puzzlers/pzzlr-template.html
@@ -13,7 +13,7 @@
       <td><a target="_blank" href="PLACEHOLDER">PLACEHOLDER</a></td>
     </tr>
     <tr>
-      <td><strong>Tested with Scala version</strong></td>
+      <td><strong>First tested with Scala version</strong></td>
       <td>PLACEHOLDER</td>
     </tr>
   </tbody>
