--- a/puzzlers/pzzlr-007.html
+++ b/puzzlers/pzzlr-007.html
@@ -12,7 +12,7 @@
       <td><a target="_blank" href="http://stackoverflow.com/questions/4591781/passing-functions-for-all-applicable-types-around">stackoverflow</a></td>
     </tr>
     <tr>
-      <td><strong>Tested with Scala version</strong></td>
+      <td><strong>First tested with Scala version</strong></td>
       <td>2.10.0</td>
     </tr>
   </tbody>  
