--- a/puzzlers/pzzlr-015.html
+++ b/puzzlers/pzzlr-015.html
@@ -12,7 +12,7 @@
       <td>N/A</td>
     </tr>
     <tr>
-      <td><strong>Tested with Scala version</strong></td>
+      <td><strong>First tested with Scala version</strong></td>
       <td>2.10.0</td>
     </tr>
   </tbody>
