--- a/puzzlers/pzzlr-022.html
+++ b/puzzlers/pzzlr-022.html
@@ -10,7 +10,7 @@
       <td><a target="_blank" href="https://groups.google.com/d/topic/scala-language/W1ZUNDAq7Fc/discussion">scala-language group</a></td>
     </tr>
     <tr>
-      <td><strong>Tested with Scala version</strong></td>
+      <td><strong>First tested with Scala version</strong></td>
       <td>2.10.0</td>
     </tr>
   </tbody>
