--- a/puzzlers/pzzlr-025.html
+++ b/puzzlers/pzzlr-025.html
@@ -13,7 +13,7 @@
       <td><a target="_blank" href="https://groups.google.com/forum/#!topic/scala-user/7B6fPJ03Vww/discussion">scala-user mailing list</a></td>
     </tr>
     <tr>
-      <td><strong>Tested with Scala version</strong></td>
+      <td><strong>First tested with Scala version</strong></td>
       <td>2.10.0</td>
     </tr>
   </tbody>
