--- a/puzzlers/pzzlr-036.html
+++ b/puzzlers/pzzlr-036.html
@@ -10,7 +10,7 @@
       <td><a target="_blank" href="https://groups.google.com/forum/#!msg/scala-user/ut94m5bH2Xs/C9pqbcinFhYJ">scala-user mailing list</a></td>
     </tr>
     <tr>
-      <td><strong>Tested with Scala version</strong></td>
+      <td><strong>First tested with Scala version</strong></td>
       <td>2.10.1</td>
     </tr>
   </tbody>
