--- a/puzzlers/pzzlr-042.html
+++ b/puzzlers/pzzlr-042.html
@@ -10,7 +10,7 @@
       <td><a target="_blank" href="https://groups.google.com/forum/#!topic/scala-language/DQ3DWSof6ls">scala-lang mailing list</a></td>
     </tr>
     <tr>
-      <td><strong>Tested with Scala version</strong></td>
+      <td><strong>First tested with Scala version</strong></td>
       <td>2.10.2</td>
     </tr>
   </tbody>
