--- a/puzzlers/pzzlr-043.html
+++ b/puzzlers/pzzlr-043.html
@@ -10,7 +10,7 @@
       <td><a target="_blank" href="https://groups.google.com/d/msg/scala-user/x_Y4uxe9ruc/MJ1QiFVy5ZAJ">scala-user mailing list</a></td>
     </tr>
     <tr>
-      <td><strong>Tested with Scala version</strong></td>
+      <td><strong>First tested with Scala version</strong></td>
       <td>2.10.2</td>
     </tr>
   </tbody>
