--- a/puzzlers/pzzlr-044.html
+++ b/puzzlers/pzzlr-044.html
@@ -10,7 +10,7 @@
       <td><a target="_blank" href="https://groups.google.com/d/msg/scala-language/F-cP_840dN0/jhUv3ubfw70J">scala-language mailing list</a></td>
     </tr>
     <tr>
-      <td><strong>Tested with Scala version</strong></td>
+      <td><strong>First tested with Scala version</strong></td>
       <td>2.11.0-M4</td>
     </tr>
   </tbody>
