--- a/puzzlers/pzzlr-048.html
+++ b/puzzlers/pzzlr-048.html
@@ -10,7 +10,7 @@
       <td><a target="_blank" href="http://nurkiewicz.github.io/talks/2014/scalar/#/12">Tomasz Nurkiewicz</a></td>
     </tr>
     <tr>
-      <td><strong>Tested with Scala version</strong></td>
+      <td><strong>First tested with Scala version</strong></td>
       <td>2.11.0-RC3</td>
     </tr>
   </tbody>
