Adding a 'Made obsolete by' item to the puzzler intro for archived puzzlers
Based on a discussion with @xhudik

--- a/puzzlers/pzzlr-002.html
+++ b/puzzlers/pzzlr-002.html
@@ -15,6 +15,10 @@
       <td><strong>First tested with Scala version</strong></td>
       <td>2.9.2</td>
     </tr>
+    <tr>
+      <td><strong>Made obsolete by</strong></td>
+      <td>The <a target="_blank" href="https://groups.google.com/d/topic/scala-internals/k9_4yp2RS90/discussion">virtualized pattern matcher</a></td>
+    </tr>
   </tbody>  
 </table>
 <div class="code-snippet">
