--- a/puzzlers/pzzlr-031.html
+++ b/puzzlers/pzzlr-031.html
@@ -13,6 +13,10 @@
       <td><strong>First tested with Scala version</strong></td>
       <td>2.9.2</td>
     </tr>
+    <tr>
+      <td><strong>Made obsolete by</strong></td>
+      <td><a href="https://issues.scala-lang.org/browse/SI-5104" target="_blank" >SI-5104</a></td>
+    </tr>
   </tbody>
 </table>
 <div class="code-snippet">
