'Tested with' -> 'First tested with' in puzzler intro
See https://github.com/scalapuzzlers/scalapuzzlers.github.com/pull/111

--- a/puzzlers/pzzlr-return-candidate.html
+++ b/puzzlers/pzzlr-return-candidate.html
@@ -10,7 +10,7 @@
       <td>Aleksandar Prokopec</td>
     </tr>
     <tr>
-      <td><strong>Tested with Scala version</strong></td>
+      <td><strong>First tested with Scala version</strong></td>
       <td>2.11.0-RC3</td>
     </tr>
   </tbody>
