--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
             <li><a href="#" id="pzzlr-050">Extract or Fail?</a></li>
             <li><a href="#" id="pzzlr-051">Well, In This Case...</a></li>
             <li><a href="#" id="pzzlr-052">Partial Oddity</a></li>
+            <li><a href="#" id="pzzlr-053">Trial and Error</a></li>
             <li class="divider"></li>
           </ul>
         </div><!--/.well -->
