--- a/puzzlers/pzzlr-004.html
+++ b/puzzlers/pzzlr-004.html
@@ -5,7 +5,7 @@
   <tbody>
     <tr>
       <td class="header-column"><strong>Contributed by</strong></td>
-      <td>Andrew Phillips & Nermin Serifovic</td>
+      <td>Andrew Phillips &amp; Nermin Serifovic</td>
     </tr>
     <tr>
       <td><strong>Source</strong></td>
