Adding puzzler 'Extract or Fail?'

--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
             <li><a href="#" id="pzzlr-047">A Listful of Dollars</a></li>
             <li><a href="#" id="pzzlr-048">One, Two, Skip a Few</a></li>
             <li><a href="#" id="pzzlr-049">Oddly Enough</a></li>
+            <li><a href="#" id="pzzlr-050">Extract or Fail?</a></li>
             <li class="divider"></li>
           </ul>
         </div><!--/.well -->
