Harmonizing references to 'Stack Overflow'

--- a/puzzlers/pzzlr-004.html
+++ b/puzzlers/pzzlr-004.html
@@ -9,7 +9,7 @@
     </tr>
     <tr>
       <td><strong>Source</strong></td>
-      <td><a target="_blank" href="http://stackoverflow.com/questions/4701749/nullpointerexception-when-accessing-overriden-val-in-abstract-constructor">stackoverflow</a></td>
+      <td><a target="_blank" href="http://stackoverflow.com/questions/4701749/nullpointerexception-when-accessing-overriden-val-in-abstract-constructor">Stack Overflow</a></td>
     </tr>
     <tr>
       <td><strong>First tested with Scala version</strong></td>
