--- a/puzzlers/pzzlr-008.html
+++ b/puzzlers/pzzlr-008.html
@@ -9,7 +9,7 @@
     </tr>
     <tr>
       <td><strong>Source</strong></td>
-      <td><a target="_blank" href="http://stackoverflow.com/questions/9842476/closing-over-the-loop-variable-in-scala">stackoverflow</a></td>
+      <td><a target="_blank" href="http://stackoverflow.com/questions/9842476/closing-over-the-loop-variable-in-scala">Stack Overflow</a></td>
     </tr>
     <tr>
       <td><strong>First tested with Scala version</strong></td>
