--- a/puzzlers/pzzlr-018.html
+++ b/puzzlers/pzzlr-018.html
@@ -80,7 +80,7 @@ catching a <a href="http://www.scala-lang.org/api/current/index.html#scala.runti
 </p><p>
 The most common reason you actually would want to return from inside a nested function is to 
 break out of an imperative for-comprehension or resource control block.
-See the answers to the stackoverflow question <a href="http://stackoverflow.com/a/3771243/714104">Purpose of 
+See the answers to the Stack Overflow question <a href="http://stackoverflow.com/a/3771243/714104">Purpose of 
 "return" statement in Scala?</a> for a further discussion of that aspect.
 </p>
 </div>
