Harmonizing references to 'scala-language mailing list'

--- a/puzzlers/pzzlr-032.html
+++ b/puzzlers/pzzlr-032.html
@@ -7,7 +7,7 @@
     </tr>
     <tr>
       <td><strong>Source</strong></td>
-      <td><a target="_blank" href="https://groups.google.com/d/topic/scala-user/KfNiYa1YoPM/discussion">scala-lang mailing list</a></td>
+      <td><a target="_blank" href="https://groups.google.com/d/topic/scala-user/KfNiYa1YoPM/discussion">scala-language mailing list</a></td>
     </tr>
     <tr>
       <td><strong>First tested with Scala version</strong></td>
