--- a/puzzlers/pzzlr-033.html
+++ b/puzzlers/pzzlr-033.html
@@ -7,7 +7,7 @@
     </tr>
     <tr>
       <td><strong>Source</strong></td>
-      <td><a target="_blank" href="https://groups.google.com/forum/#!msg/scala-language/OWTVHhsP3JU/Kyb8h2SqnS4J">scala-lang mailing list</a></td>
+      <td><a target="_blank" href="https://groups.google.com/forum/#!msg/scala-language/OWTVHhsP3JU/Kyb8h2SqnS4J">scala-language mailing list</a></td>
     </tr>
     <tr>
       <td><strong>First tested with Scala version</strong></td>
@@ -104,6 +104,6 @@ What a nice day! :-)
   <p>If the default implicit is provided by external code, where its name might change at any time, this results in brittle code, too. At least the &quot;ambiguous implicit values&quot;error message helpfully provides the name of the implicit that we need to override.
   </p>
   <p>
-    See the <a href="https://groups.google.com/d/topic/scala-language/OWTVHhsP3JU/discussion" target="_blank">scala-lang thread</a> for further discussion. Don't let <a href="https://groups.google.com/forum/#!msg/scala-internals/8TrS3ar5LcY/Ic7M4YkRD68J" target="_blank">implicit scope become your kryptonite</a>!
+    See the <a href="https://groups.google.com/d/topic/scala-language/OWTVHhsP3JU/discussion" target="_blank">scala-language thread</a> for further discussion. Don't let <a href="https://groups.google.com/forum/#!msg/scala-internals/8TrS3ar5LcY/Ic7M4YkRD68J" target="_blank">implicit scope become your kryptonite</a>!
   </p>
 </div>
