--- a/puzzlers/pzzlr-021.html
+++ b/puzzlers/pzzlr-021.html
@@ -7,7 +7,7 @@
     </tr>
     <tr>
       <td><strong>Source</strong></td>
-      <td><a target="_blank" href="https://groups.google.com/forum/?fromgroups#!topic/scala-language/p3K7HEwCXhc">scala-lang mailing list</a></td>
+      <td><a target="_blank" href="https://groups.google.com/forum/?fromgroups#!topic/scala-language/p3K7HEwCXhc">scala-language mailing list</a></td>
     </tr>
     <tr>
       <td><strong>First tested with Scala version</strong></td>
