--- a/puzzlers/pzzlr-022.html
+++ b/puzzlers/pzzlr-022.html
@@ -7,7 +7,7 @@
     </tr>
     <tr>
       <td><strong>Source</strong></td>
-      <td><a target="_blank" href="https://groups.google.com/d/topic/scala-language/W1ZUNDAq7Fc/discussion">scala-language group</a></td>
+      <td><a target="_blank" href="https://groups.google.com/d/topic/scala-language/W1ZUNDAq7Fc/discussion">scala-language mailing list</a></td>
     </tr>
     <tr>
       <td><strong>First tested with Scala version</strong></td>
