--- a/puzzlers/pzzlr-023.html
+++ b/puzzlers/pzzlr-023.html
@@ -7,7 +7,7 @@
     </tr>
     <tr>
       <td><strong>Source</strong></td>
-      <td><a target="_blank" href="https://groups.google.com/forum/?fromgroups#!topic/scala-user/qWLV6LahmXU">scala-lang mailing list</a></td>
+      <td><a target="_blank" href="https://groups.google.com/forum/?fromgroups#!topic/scala-user/qWLV6LahmXU">scala-language mailing list</a></td>
     </tr>
     <tr>
       <td><strong>First tested with Scala version</strong></td>
