--- a/puzzlers/pzzlr-042.html
+++ b/puzzlers/pzzlr-042.html
@@ -7,7 +7,7 @@
     </tr>
     <tr>
       <td><strong>Source</strong></td>
-      <td><a target="_blank" href="https://groups.google.com/forum/#!topic/scala-language/DQ3DWSof6ls">scala-lang mailing list</a></td>
+      <td><a target="_blank" href="https://groups.google.com/forum/#!topic/scala-language/DQ3DWSof6ls">scala-language mailing list</a></td>
     </tr>
     <tr>
       <td><strong>First tested with Scala version</strong></td>
